<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>lanelet_rviz_plugin_ros</name>
  <version>1.0.0</version>
  <description>Rviz Plugin for displaying a lanelet map</description>

  <license>BSD</license>
  <maintainer email="piotr.orzechowski@kit.edu">Piotr Orzechowski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>rviz</depend>
  <depend>qtbase5-dev</depend>
  <depend>boost</depend>
  <depend>util_rviz</depend>

  <depend>lanelet2_io</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_interface_ros</depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>